// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PatchBuilder SchemaPatch metadata detects default value change 1`] = `
[
  {
    "contentMediaTypeChange": undefined,
    "defaultChange": {
      "fromDefault": "initial",
      "toDefault": "modified",
    },
    "deprecatedChange": undefined,
    "descriptionChange": undefined,
    "fieldName": "field",
    "foreignKeyChange": undefined,
    "formulaChange": undefined,
    "metadataChanges": [
      "default",
    ],
    "patch": {
      "op": "replace",
      "path": "/properties/field",
      "value": {
        "default": "modified",
        "type": "string",
      },
    },
    "typeChange": undefined,
  },
]
`;

exports[`PatchBuilder SchemaPatch metadata detects deprecated change 1`] = `
[
  {
    "contentMediaTypeChange": undefined,
    "defaultChange": undefined,
    "deprecatedChange": {
      "fromDeprecated": undefined,
      "toDeprecated": true,
    },
    "descriptionChange": undefined,
    "fieldName": "field",
    "foreignKeyChange": undefined,
    "formulaChange": undefined,
    "metadataChanges": [
      "deprecated",
    ],
    "patch": {
      "op": "replace",
      "path": "/properties/field",
      "value": {
        "default": "",
        "deprecated": true,
        "type": "string",
      },
    },
    "typeChange": undefined,
  },
]
`;

exports[`PatchBuilder SchemaPatch metadata detects description change 1`] = `
[
  {
    "contentMediaTypeChange": undefined,
    "defaultChange": undefined,
    "deprecatedChange": undefined,
    "descriptionChange": {
      "fromDescription": "old description",
      "toDescription": "new description",
    },
    "fieldName": "field",
    "foreignKeyChange": undefined,
    "formulaChange": undefined,
    "metadataChanges": [
      "description",
    ],
    "patch": {
      "op": "replace",
      "path": "/properties/field",
      "value": {
        "default": "",
        "description": "new description",
        "type": "string",
      },
    },
    "typeChange": undefined,
  },
]
`;

exports[`PatchBuilder SchemaPatch metadata detects foreignKey addition 1`] = `
[
  {
    "contentMediaTypeChange": undefined,
    "defaultChange": undefined,
    "deprecatedChange": undefined,
    "descriptionChange": undefined,
    "fieldName": "field",
    "foreignKeyChange": {
      "fromForeignKey": undefined,
      "toForeignKey": "users",
    },
    "formulaChange": undefined,
    "metadataChanges": [
      "foreignKey",
    ],
    "patch": {
      "op": "replace",
      "path": "/properties/field",
      "value": {
        "default": "",
        "foreignKey": "users",
        "type": "string",
      },
    },
    "typeChange": undefined,
  },
]
`;

exports[`PatchBuilder SchemaPatch metadata detects foreignKey change 1`] = `
[
  {
    "contentMediaTypeChange": undefined,
    "defaultChange": undefined,
    "deprecatedChange": undefined,
    "descriptionChange": undefined,
    "fieldName": "field",
    "foreignKeyChange": {
      "fromForeignKey": "users",
      "toForeignKey": "categories",
    },
    "formulaChange": undefined,
    "metadataChanges": [
      "foreignKey",
    ],
    "patch": {
      "op": "replace",
      "path": "/properties/field",
      "value": {
        "default": "",
        "foreignKey": "categories",
        "type": "string",
      },
    },
    "typeChange": undefined,
  },
]
`;

exports[`PatchBuilder SchemaPatch metadata detects foreignKey removal 1`] = `
[
  {
    "contentMediaTypeChange": undefined,
    "defaultChange": undefined,
    "deprecatedChange": undefined,
    "descriptionChange": undefined,
    "fieldName": "field",
    "foreignKeyChange": {
      "fromForeignKey": "users",
      "toForeignKey": undefined,
    },
    "formulaChange": undefined,
    "metadataChanges": [
      "foreignKey",
    ],
    "patch": {
      "op": "replace",
      "path": "/properties/field",
      "value": {
        "default": "",
        "type": "string",
      },
    },
    "typeChange": undefined,
  },
]
`;

exports[`PatchBuilder SchemaPatch metadata detects formula addition 1`] = `
[
  {
    "contentMediaTypeChange": undefined,
    "defaultChange": undefined,
    "deprecatedChange": undefined,
    "descriptionChange": undefined,
    "fieldName": "field",
    "foreignKeyChange": undefined,
    "formulaChange": {
      "fromFormula": undefined,
      "fromVersion": undefined,
      "toFormula": "value * 2",
      "toVersion": 1,
    },
    "metadataChanges": [
      "formula",
    ],
    "patch": {
      "op": "replace",
      "path": "/properties/field",
      "value": {
        "default": 0,
        "readOnly": true,
        "type": "number",
        "x-formula": {
          "expression": "value * 2",
          "version": 1,
        },
      },
    },
    "typeChange": undefined,
  },
]
`;

exports[`PatchBuilder SchemaPatch metadata detects formula removal 1`] = `
[
  {
    "contentMediaTypeChange": undefined,
    "defaultChange": undefined,
    "deprecatedChange": undefined,
    "descriptionChange": undefined,
    "fieldName": "computed",
    "foreignKeyChange": undefined,
    "formulaChange": {
      "fromFormula": "value * 2",
      "fromVersion": 1,
      "toFormula": undefined,
      "toVersion": undefined,
    },
    "metadataChanges": [
      "formula",
    ],
    "patch": {
      "op": "replace",
      "path": "/properties/computed",
      "value": {
        "default": 0,
        "type": "number",
      },
    },
    "typeChange": undefined,
  },
]
`;

exports[`PatchBuilder SchemaPatch metadata detects type change from string to number 1`] = `
[
  {
    "contentMediaTypeChange": undefined,
    "defaultChange": undefined,
    "deprecatedChange": undefined,
    "descriptionChange": undefined,
    "fieldName": "field",
    "foreignKeyChange": undefined,
    "formulaChange": undefined,
    "metadataChanges": [],
    "patch": {
      "op": "replace",
      "path": "/properties/field",
      "value": {
        "default": 0,
        "type": "number",
      },
    },
    "typeChange": {
      "fromType": "string",
      "toType": "number",
    },
  },
]
`;

exports[`PatchBuilder SchemaPatch metadata marks move as rename when parent is same 1`] = `
[
  {
    "fieldName": "newName",
    "formulaChange": undefined,
    "isRename": true,
    "metadataChanges": [],
    "movesIntoArray": undefined,
    "patch": {
      "from": "/properties/oldName",
      "op": "move",
      "path": "/properties/newName",
    },
  },
]
`;

exports[`PatchBuilder add patch metadata includes default value in add patch when not standard 1`] = `
[
  {
    "defaultChange": {
      "fromDefault": undefined,
      "toDefault": "my default",
    },
    "fieldName": "field",
    "metadataChanges": [
      "default",
    ],
    "patch": {
      "op": "add",
      "path": "/properties/field",
      "value": {
        "default": "my default",
        "type": "string",
      },
    },
  },
]
`;

exports[`PatchBuilder add patch metadata includes deprecated in add patch when field is deprecated 1`] = `
[
  {
    "deprecatedChange": {
      "fromDeprecated": undefined,
      "toDeprecated": true,
    },
    "fieldName": "field",
    "metadataChanges": [
      "deprecated",
    ],
    "patch": {
      "op": "add",
      "path": "/properties/field",
      "value": {
        "default": "",
        "deprecated": true,
        "type": "string",
      },
    },
  },
]
`;

exports[`PatchBuilder add patch metadata includes description in add patch when field has description 1`] = `
[
  {
    "descriptionChange": {
      "fromDescription": undefined,
      "toDescription": "My description",
    },
    "fieldName": "field",
    "metadataChanges": [
      "description",
    ],
    "patch": {
      "op": "add",
      "path": "/properties/field",
      "value": {
        "default": "",
        "description": "My description",
        "type": "string",
      },
    },
  },
]
`;

exports[`PatchBuilder add patch metadata includes foreignKey in add patch when field has foreignKey 1`] = `
[
  {
    "fieldName": "categoryId",
    "foreignKeyChange": {
      "fromForeignKey": undefined,
      "toForeignKey": "categories",
    },
    "metadataChanges": [
      "foreignKey",
    ],
    "patch": {
      "op": "add",
      "path": "/properties/categoryId",
      "value": {
        "default": "",
        "foreignKey": "categories",
        "type": "string",
      },
    },
  },
]
`;

exports[`PatchBuilder add patch metadata includes formula in add patch when field has formula 1`] = `
[
  {
    "fieldName": "computed",
    "formulaChange": {
      "fromFormula": undefined,
      "fromVersion": undefined,
      "toFormula": "value * 2",
      "toVersion": 1,
    },
    "metadataChanges": [
      "formula",
    ],
    "patch": {
      "op": "add",
      "path": "/properties/computed",
      "value": {
        "default": 0,
        "readOnly": true,
        "type": "number",
        "x-formula": {
          "expression": "value * 2",
          "version": 1,
        },
      },
    },
  },
]
`;
